because there's only one example

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <p class="lead">When your AngularJS application needs a doge.</p>
 
-            <h2>Example Doges</h2>
+            <h2>Example Doge</h2>
 
             <p>Doges are scalable with the <code>scale</code> attribute.<p>
 
