change to camelcase

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     </head>
     <body>
-        <div class="container" ng-app="doge-app">
+        <div class="container" ng-app="dogeApp">
             <h1>Angular Doge Directive</h1>
 
             <hr>
